arg: don't crash when asked to convert a null strv to an array

In that case, return an empty array.

https://phabricator.endlessm.com/T14337

https://bugzilla.gnome.org/show_bug.cgi?id=775679